--- a/package.json
+++ b/package.json
@@ -11,13 +11,18 @@
   "engines": {
     "node": "^4.0.0"
   },
-  "dependencies": {},
+  "dependencies": {
+    "babel-runtime": "^6.23.0"
+  },
   "devDependencies": {
     "babel-core": "^6.24.0",
     "babel-loader": "^6.4.1",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.2.2",
     "babel-preset-es2015": "^6.24.0",
     "babel-preset-stage-2": "^6.22.0",
+    "uglify-js": "^2.8.16",
+    "uglifyjs-webpack-plugin": "^0.3.1",
     "webpack": "^2.3.1"
   }
 }
