--- a/package.json
+++ b/package.json
@@ -2,27 +2,42 @@
   "name": "Lucidum",
   "version": "2.0.0",
   "private": true,
-  "apidoc": {
-    "name": "API Lucidum",
-    "description": "apidoc lucidum",
-    "title": "API lucidum"
+  "scripts": {
+    "server": "NODE_ENV=development TYPE_APP=admin node index.js",
+    "client": "webpack --progress",
+    "dev-server": "webpack-dev-server --progress --colors"
   },
-  "scripts": {},
   "engines": {
     "node": "^4.0.0"
   },
   "dependencies": {
-    "babel-runtime": "^6.23.0"
+    "@uirouter/angularjs": "^1.0.3",
+    "@uirouter/visualizer": "^4.0.0",
+    "angular": "^1.6.4",
+    "angular-animate": "^1.6.4",
+    "angular-aria": "^1.6.4",
+    "angular-material": "^1.1.4",
+    "angular-material-icons": "^0.7.1",
+    "lodash": "^4.17.4",
+    "three": "^0.85.2"
   },
   "devDependencies": {
     "babel-core": "^6.24.0",
     "babel-loader": "^6.4.1",
-    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.2.2",
     "babel-preset-es2015": "^6.24.0",
     "babel-preset-stage-2": "^6.22.0",
+    "css-loader": "^0.28.2",
+    "extract-text-webpack-plugin": "^2.1.0",
+    "html-loader": "^0.4.5",
+    "html-webpack-plugin": "^2.28.0",
+    "node-sass": "^4.5.3",
+    "sass-loader": "^6.0.5",
+    "style-loader": "^0.18.0",
     "uglify-js": "^2.8.16",
     "uglifyjs-webpack-plugin": "^0.3.1",
-    "webpack": "^2.3.1"
+    "url-loader": "^0.5.8",
+    "webpack": "^2.6.0",
+    "webpack-dev-server": "^2.4.5"
   }
 }
